@@ -4016,4 +4016,16 @@ No match
     \xF3aaa\xE4\xEA\xEB\xFEa
  0: \xf3aaa\xe4\xea\xeb\xfea
 
+/Я/i,utf
+    \x{42f} 
+ 0: \x{42f}
+    \x{44f} 
+ 0: \x{44f}
+
+/(?=Я)/i,utf
+    \x{42f} 
+ 0: 
+    \x{44f} 
+ 0: 
+
 # End of testinput4
