@@ -177,6 +177,11 @@ sanitizer complaint (regexec is supposed to be thread safe).
 37. Add NEON vectorization to JIT to speed up matching of first character and
 pairs of characters on ARM64 CPUs.
 
+38. If a non-ASCII character was the first in a starting assertion in a
+caseless match, the "first code unit" optimization did not get the casing
+right, and the assertion failed to match a character in the other case if it
+did not start with the same code unit.
+
 
 Version 10.33 16-April-2019
 ---------------------------
